# everything-bot

./: .gitignore  README.md  game.db  pyproject.toml  streamers.json  template.env
bot/: __main__.py  bot.py  errors.py  settings.py  ui.py  utils.py
bot/cogs/: error_handler.py
bot/cogs/dev/: memory_check.py
bot/cogs/economy/: bank.py  crime.py  jobs.py  shopcog.py
bot/cogs/economy/pet/: pets.py
bot/cogs/fun/: games.py  levels.py  twitch.py
bot/cogs/fun/tts/: vc_msg.py
bot/cogs/moderation/: applications.py  log.py  moderation.py  perma_message.py  reaction_roles.py  tickets.py  vc_ban.py
bot/cogs/moderation/infractions/: admin.py
bot/cogs/moderation/staff_management/: manage.py
bot/database/: commands.py
bot/economy/: economy_objects.py  jobs.py  pet.py  shop.py
bot/levels/: level_system.py
bot/levels/images/: generate.py
